Bug 136193 - Automatic Spell Checking not working
Summary: Automatic Spell Checking not working
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Chat Window (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-10-23 19:29 UTC by Nicholas Doyle
Modified: 2008-07-13 19:15 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicholas Doyle 2006-10-23 19:29:56 UTC
Version:           0.12.3 (using KDE KDE 3.5.5)
Installed from:    Gentoo Packages
Compiler:          GCC 4.1.1 
OS:                Linux

I am unable to use the "Automatic Spell Checking" option in Kopete. Normal manual spell checking works in Kopete and automatic spell checking works in all other KDE applications. The "Automatic Spell Checking" option in the Settings menu of all chat windows is grayed out and is unclickable. Why is this option not available?
Comment 1 Alberto Gonzalez 2006-11-02 17:55:39 UTC
Not sure if it's the same case, but here it's not working correctly either (same Kopete and KDE versions, but using Arch Linux).

Under the ICQ protocol automatic spell check should work, since it doesn't use rich text. In fact, if I right-click on an ICQ contact and select "Send single message" the spelling checker works fine. But it I click "Start Chat..." it doesn't work.

In Yahoo protocol, if I disable rich text, it works fine, though.
Comment 2 Alberto Gonzalez 2006-11-04 19:58:15 UTC
Ok, sorry, I just realized I have to right-click on the text area of the chat window and enable it from there.

I think this might be the solution to the original poster problem, as long as he has automatic spell checking enabled in settings > configure > behavior > chat

Comment 3 Nicholas Doyle 2006-11-04 20:12:19 UTC
Yes, right clicking the chat area lets me turn on spell checking.

Though the bug about the ability to enable spell checking from the Settings menu still persists. The symptoms are cured but the problem still exists :)
Comment 4 Alberto Gonzalez 2006-11-05 18:55:04 UTC
Yes, I agree, the option to enable it from the Settings menu in the chat window is greyed out. Moreover, enabling it with a right-click on the text area doesn't remember the option and you have to enable it on every window every time.

This problem exists in ICQ and MSN accounts, but not in Jabber or Yahoo accounts. The different behavior could be related to the rich text used in the latter ones, while the former ones don't allow rich text.
Comment 5 Marcelo Sales 2006-12-14 00:58:10 UTC
*** This bug has been confirmed by popular vote. ***
Comment 6 Scott Templer 2007-06-09 12:30:29 UTC
Well can't speak for other distros but this is a problem in Kubuntu still as of KDE 3.5.7 and as for right clicking and selecting auto spell check that works
Comment 7 David Masover 2007-09-19 07:02:07 UTC
Slightly different bug:

Right-clicking in the text area will let me turn on spell checking. Then, the auto spellchecking works, but it has weird effects with rich text (this is a Yahoo window I'm testing). Specifically, misspelled words (including Kopete itself) not only turn red in my window, but are seen as red by the other person. What's more, this being Yahoo, they turn the entire message red.

I cannot turn on spellchecking any other way, including manually. The button is greyed out. I do have aspell and an English dictionary installed.
Comment 8 Matt Rogers 2007-09-26 06:30:32 UTC
Re: Comment #7
The red text is the reason that automatic spell checking is off by default for protocols that send rich text.
Comment 9 Roman Jarosz 2008-07-13 19:14:53 UTC
SVN commit 831935 by rjarosz:

Allow spell-checking on html/rtf text.
Save spellchecker settings for every chat window.
Use global spellchecker settings (enable/disable).

Patch checked and updated by Dennis Nienhüser.

BUG: 136193
BUG: 129983
BUG: 160909



 M  +0 -27     chattexteditpart.cpp  
 M  +0 -15     chattexteditpart.h  
 M  +2 -2      chatview.cpp  
 M  +12 -35    kopetechatwindow.cpp  
 M  +3 -2      kopetechatwindow.h  
 M  +10 -6     krichtexteditpart.cpp  
 M  +12 -0     krichtexteditpart.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=831935
Comment 10 Roman Jarosz 2008-07-13 19:15:35 UTC
SVN commit 831936 by rjarosz:

Backport commit 831935.
Allow spell-checking on html/rtf text.
Save spellchecker settings for every chat window.
Use global spellchecker settings (enable/disable).

Patch checked and updated by Dennis Nienhüser.

CCBUG: 136193
CCBUG: 129983
CCBUG: 160909



 M  +0 -27     chattexteditpart.cpp  
 M  +0 -15     chattexteditpart.h  
 M  +2 -2      chatview.cpp  
 M  +12 -35    kopetechatwindow.cpp  
 M  +3 -2      kopetechatwindow.h  
 M  +10 -6     krichtexteditpart.cpp  
 M  +12 -0     krichtexteditpart.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=831936