Allow spell-checking on html/rtf text. Save spellchecker settings for every chat window. Use global spellchecker settings (enable/disable).

Patch checked and updated by Dennis Nienhüser.

BUG: 136193
BUG: 129983
BUG: 160909


svn path=/trunk/KDE/kdenetwork/kopete/; revision=831935